@@ -1,10 +1,0 @@
-library(gamboostLSS)
-1
-citation("gamboostLSS")
-citation("mboost")
-?citation
-x <- citation("mboost")
-x
-str(x)
-toBibtex(x)
-q()
